# bibly

./: README.rst  pyproject.toml
.github/workflows/: python-publish.yml
bibly/: __init__.py  base_handler.py  client.py  handler_registry.py  openalex_handler.py  sciencedirect_handler.py  scopus_handler.py  search_handler.py  springer_handler.py
bibly/handlers/: openalex_handler.py  register_handlers.py  sciencedirect_handler.py  scopus_handler.py  springer_handler.py
bibly/utils/: __init__.py  logger.py  parse.py
src/bibly/: base_handler.py  client.py  handler_registry.py
src/bibly/handlers/: __init__.py  openalex_handler.py  register_handlers.py  sciencedirect_handler.py  scopus_handler.py  springer_handler.py
src/bibly/utils/: __init__.py  constants.py  dedup.py  logger.py
