[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibly"
version = "0.0.3"
authors = [
  { name="Nils A. Herrmann de Alba", email="nils_herrmann@outlook.de" },
]
description = "Simple package for literature retrieval."
readme = "README.rst"
requires-python = ">=3.11"
dependencies = ["pybliometrics", "sprynger", "pyalex"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["bibly", "bibly.*"]
