[project]
name = "bibly"
version = "0.0.4"
description = "Simple package for literature retrieval."
readme = "README.rst"
authors = [
  { name = "Nils A. Herrmann de Alba", email = "nils_herrmann@outlook.de" },
]
requires-python = ">=3.11"
dependencies = [
    "pybliometrics-sd>=4.4a0",
    "sprynger>=0.4.2",
    "pyalex>=0.21",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nils-herrmann/bibly"
Repository = "https://github.com/nils-herrmann/bibly"

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6",
    "python-dotenv>=1.2.2",
    "pandas>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
